--- a/src/app/components/favorite/favorite.component.css
+++ b/src/app/components/favorite/favorite.component.css
@@ -18,3 +18,28 @@
     background-color: rgba(212, 212, 212, 0.233);
     border-radius: 10%;
 }
+
+.disabled-button {
+    
+    opacity: 0.5; 
+    background-color: gray;
+    color: black
+  }
+
+.disabled-button:focus {
+    outline: none; 
+  }
+  
+.disabled-button:disabled {
+    cursor: not-allowed; 
+  }
+
+.disabled-button:not(:disabled):hover {
+    background-color: lightgray; 
+    color: black; 
+}
+
+.span-disabled {
+
+    color: rgb(122, 33, 33);
+}
