--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -2,3 +2,15 @@
 
     color: #ff3300;
 }
+
+.disabled-link {
+    pointer-events: none;
+    color: gray;
+    text-decoration: none;
+    opacity: 0.5; 
+  }
+
+  .span-disabled {
+
+    color: rgb(122, 33, 33);
+}
