--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -54,8 +54,8 @@
                                 <td style="text-align: center;" class="price" data-label="Price">
                                     {{item.product.price*(1 - item.product.discount/100) |  number}}đ
                                 </td>
-                                <td style="text-align: center;" class="price" data-label="Price" [ngClass]="{'textAlert' : item.product.quantity - item.quantity == 0}">
-                                    {{item.product.quantity - item.quantity|  number}}
+                                <td style="text-align: center;" class="price" data-label="Price" [ngClass]="{'textAlert' : item.product.quantity - item.quantity <= 0}">
+                                    {{(item.quantity < 0) ? (item.product.quantity | number) : (item.product.quantity - item.quantity <= 0 ? 0 : (item.product.quantity - item.quantity | number))}}
                                 </td>
                                 <td data-label="Quantity" style="text-align: center;">
                                     <input style="text-align: center;"
@@ -66,7 +66,7 @@
                                     (change)="update(item.cartDetailId, item.quantity)" />
                                 </td>
                                 <td style="text-align: center;" data-label="Status">
-                                    <span class="ps-tag ps-tag--in-stock" [ngClass]="{'span-disabled': item.product.status === false}">{{item.product.status === false ? 'Tạm thời hết hàng': 'Còn hàng'}}</span>
+                                    <span class="ps-tag ps-tag--in-stock" [ngClass]="{'span-disabled':((item.product.quantity - item.quantity <= 0))}">{{(item.product.quantity - item.quantity <= 0) ? 'Tạm thời hết hàng': 'Còn hàng'}}</span>
                                 </td>
                                 <td style="text-align: center;" data-label="Total">
                                     {{item.price |  number}}đ
